CSS: Fixed content width behaviour in popups Fixed legend wrap and overflow problems when long content and small width, like in popups

--- a/suit/static/suit/css/suit.css
+++ b/suit/static/suit/css/suit.css
@@ -105,7 +105,7 @@ tr.form-row:nth-last-child(3) td .inline-sortable .sortable-down,#result_list tr
 .pagination-info{display:block;float:left;margin:5px 0 0 0}
 h2.legend,.form-horizontal fieldset .legend{font-weight:bold;font-size:16px;line-height:36px;text-shadow:0 1px rgba(255,255,255,0.5);padding-left:10px}
 .form-horizontal fieldset{display:table;width:100%;margin-top:35px;position:relative;box-shadow:0 0 1px rgba(0,0,0,0.4);-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;-webkit-border-top-left-radius:4px;-moz-border-radius-topleft:4px;border-top-left-radius:4px;-webkit-border-top-right-radius:4px;-moz-border-radius-topright:4px;border-top-right-radius:4px;-webkit-border-bottom-left-radius:4px;-moz-border-radius-bottomleft:4px;border-bottom-left-radius:4px;-webkit-border-bottom-right-radius:4px;-moz-border-radius-bottomright:4px;border-bottom-right-radius:4px;}.form-horizontal fieldset.first,.popup .form-horizontal fieldset:first-of-type{margin-top:0}
-.form-horizontal fieldset .legend{border:0;margin:-30px 0 0 0;position:absolute;top:0;width:auto}.form-horizontal fieldset .legend .description{font-weight:normal;font-size:12px;display:inline-block;margin-left:20px;color:#999}
+.form-horizontal fieldset .legend{border:0;margin:-30px 0 0 0;position:absolute;top:0;width:98%;white-space:nowrap;overflow:hidden;margin-right:220px}.form-horizontal fieldset .legend .description{font-weight:normal;font-size:12px;display:inline-block;margin-left:20px;color:#999}
 .form-horizontal fieldset.collapse{overflow:visible;height:auto}
 .form-horizontal fieldset.collapsed{background-color:#f6f7f8}.form-horizontal fieldset.collapsed .legend{position:static;font-size:13px;font-weight:normal}
 .form-horizontal fieldset.full-width{box-shadow:none}.form-horizontal fieldset.full-width .control-group{-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;-webkit-border-top-left-radius:0;-moz-border-radius-topleft:0;border-top-left-radius:0;-webkit-border-top-right-radius:0;-moz-border-radius-topright:0;border-top-right-radius:0;-webkit-border-bottom-left-radius:0;-moz-border-radius-bottomleft:0;border-bottom-left-radius:0;-webkit-border-bottom-right-radius:0;-moz-border-radius-bottomright:0;border-bottom-right-radius:0;width:100%;display:block}.form-horizontal fieldset.full-width .control-group>div{display:block}
@@ -281,7 +281,7 @@ a.append-icon i{margin-left:5px}
 .errorlist{color:#b94a48}
 .suit-columns{padding-left:200px;padding-right:40px;}.suit-columns .suit-column{position:relative;float:left}
 .popup .suit-columns{padding:0}
-#suit-center{padding:20px;width:100%}.popup #suit-center{width:auto;padding-bottom:0}
+#suit-center{padding:20px;width:100%}.popup #suit-center{width:94.9%;padding-bottom:0}
 #suit-left{width:200px;right:240px;margin-left:-100%}
 #suit-right{width:130px;padding:0 10px;margin-right:-190px;}
 #push{clear:both}
