--- a/suit/static/suit/less/ui/form.less
+++ b/suit/static/suit/less/ui/form.less
@@ -21,7 +21,10 @@ h2.legend, .form-horizontal fieldset .legend {
             margin: -30px 0 0 0;
             position: absolute;
             top: 0;
-            width: auto;
+            width: 98%;
+            white-space: nowrap;
+            overflow: hidden;
+            margin-right: (@right-column-width + (@padding * 2));
             .description {
                 font-weight: normal;
                 font-size: 12px;
